# oop

./: 1.txt  CMakeLists.txt  main.cpp
command/: BaseCommand.cpp  base_command.h  camera_command.h  model_command.h  object_command.cpp  object_command.h
concepts/: concept.h
drawer/: BaseGraphicsScene.h  GraphicsFactory.h  GraphicsSolution.h  QtGraphicsFactory.h  QtGraphicsScene.cpp  QtGraphicsScene.h
exceptions/: BaseExceptions.h  LoaderExceptions.h  exceptions_base.h  exceptions_iterator.h  exceptions_vector.h
facade/: facade.cpp  facade.h
iterator/: base_iterator.h  const_iterator.h  const_iterator.hpp  const_reverse_iterator.h  const_reverse_iterator.hpp  iterator.h  iterator.hpp  reverse_iterator.h  reverse_iterator.hpp
lab_01/: corrupted_data.txt  draw.cpp  draw.h  edges.cpp  edges.h  errors.cpp  errors.h  figure.cpp  figure.h  files.cpp  files.h  lab_01.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  point.cpp  point.h  task.cpp  task.h  vertices.cpp  vertices.h
load/: BaseBuilder.h  BaseCreator.h  BaseDirector.h  BaseLoadModerator.h  BaseLoader.h  BaseModelBuilder.h  BaseModelDirector.h  FileCarcasModelLoader.cpp  FileCarcasModelLoader.h  FileModelDirector.cpp  FileModelDirector.h  ModelBuilder.cpp  ModelBuilder.h  ModelLoadModerator.cpp  ModelLoadModerator.h  SolutionModelLoadModerator.cpp  SolutionModelLoadModerator.h
load_save/: CarcasModelFileSource.cpp  CarcasModelFileSource.h  CarcasModelSource.h  CarcasModelSourceSolution.cpp  CarcasModelSourceSolution.h
managers/: BaseManager.h  cameramanager.cpp  cameramanager.h  drawmanager.cpp  drawmanager.h  loadmanager.cpp  loadmanager.h  managersolution.cpp  managersolution.h  scenemanager.cpp  scenemanager.h  transformmanager.cpp  transformmanager.h
math/: 1.h  glm_wrapped.cpp  glm_wrapped.h  math.h  transformation.cpp  transformation.h
matrix/matrix/: matrix.h
objects/: BaseObject.cpp  BaseObject.h  composite.cpp  composite.h
objects/carcas_model/: point.cpp  point.h
objects/invisible_object/: BaseCamera.h  Camera.cpp  Camera.h  CameraSolution.cpp  CameraSolution.h  InvisibleObject.h
objects/visible_object/: BaseModel.h  VisibleObject.h
objects/visible_object/carcas_model/: CarcasModel.h  edge.cpp  edge.h  figure.cpp  figure.h  point.cpp  point.h
scene/: scene.cpp  scene.h
vector/: base_vector.h  base_vector.hpp  vector.h  vector.hpp
visitor/: BaseVisitor.h  TransformVisitor.cpp  TransformVisitor.h  drawvisitor.cpp  drawvisitor.h
